--- a/static/css/index.css
+++ b/static/css/index.css
@@ -162,3 +162,22 @@ body {
   }
 }
 /* rainbow text done */
+
+/* Responsive YouTube Embeds */
+.video-responsive {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  padding-top: 25px;
+  height: 0;
+  margin-bottom: 1.5rem;
+}
+.video-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1em;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  border: none;
+}
